--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<title>test site</title>
+	<link rel="stylesheet" href="index.css">
+</head>
+<body>
+	
+</body>
+</html>
+
 <h1>first git!　　　desuyo</h1>
